tests/compiler/errors/const_fn_control_flow.casa
# expect: SYNTAX
const fn bad x:int -> int {
    if true then
        x
    fi
}
